split tsconfigs ,add eslint lint command to main.yml, add types to cypress

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: eslint
+        run: npm run lint:eslint
+
       - name: Integration Tests
         run: npm run test
 
