--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "types": ["cypress", "@testing-library/cypress"]
   },
-  "include": ["../node_modules/cypress", "./**/*.ts"]
+  "include": ["./**/*.ts", "../node_modules/cypress"]
 }
