--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "lint:eslint": "eslint .",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "cypress:open": "cypress open"
