--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.1",
@@ -26,6 +28,7 @@
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "axe-core": "^4.3.3",
