--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "17.0.34",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "axe-core": "^4.3.3",
@@ -51,6 +52,7 @@
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "uuid": "^8.3.2"
   }
 }
