--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "editor.formatOnSave": true,
   "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 100,
+  "editor.guides.bracketPairs": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
