--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@plaiceholder/next": "^2.2.0",
     "framer-motion": "^5.3.0",
     "next": "12.0.3",
     "nextjs-progressbar": "0.0.13",
+    "plaiceholder": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "tslib": "^2.1.0"
