--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nextjs-progressbar": "0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.4",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "tslib": "^2.1.0"
@@ -31,6 +32,7 @@
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.15",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
