--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "framer-motion": "^5.3.0",
+    "mongoose": "^6.0.14",
     "next": "12.0.3",
     "nextjs-progressbar": "0.0.13",
     "react": "17.0.2",
