--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.14.4",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
+    "swr": "^1.1.0",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
