--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.3.1",
+    "msw": "^0.36.3",
     "nock": "^13.2.1",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
