--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:eslint": "eslint .",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress": "cypress run"
   },
   "dependencies": {
     "framer-motion": "^5.3.0",
