--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           build: npm run build
+          start: npm run start
           wait-on: http://localhost:3000
