fix: run startci in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           build: npm run build
-          start: npm run start
+          start: npm run startci
           wait-on: http://localhost:3001
