--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "startci": "next start -p 3001",
     "lint": "next lint",
     "test": "jest",
     "lint:eslint": "eslint .",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress": "cypress run"
   },
   "dependencies": {
     "framer-motion": "^5.3.0",
