--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cypress": "cypress run"
   },
   "dependencies": {
+    "@moxy/next-router-scroll": "^2.2.0",
     "framer-motion": "^5.3.0",
     "mongoose": "^6.0.14",
     "next": "12.0.3",
@@ -33,6 +34,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
+    "@types/moxy__next-router-scroll": "^2.2.1",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "^17.0.9",
