--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
+    "@types/moxy__next-router-scroll": "^2.2.1",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "@types/react-dom": "^17.0.9",
