--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@stripe/stripe-js": "^1.22.0",
     "framer-motion": "^5.3.0",
+    "micro-cors": "^0.1.1",
     "mongoose": "^6.0.14",
     "next": "12.0.3",
     "nextjs-progressbar": "0.0.13",
