--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "nock": "^13.2.1",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
-    "typescript": "4.4.4",
-    "uuid": "^8.3.2"
+    "typescript": "4.4.4"
   }
 }
